selfhost/test/typechecker/typeidentifier/error_typeargs_too_many.out
Error at %FILE_NAME%:1:8
Incorrect number of type arguments
  |  var _: Map<Int, String, Bool>
            ^
Expected 2, but 3 were passed
