selfhost/test/typechecker/typeidentifier/error_typeargs_too_many.abra
var _: Map<Int, String, Bool>